--- a/app/src/main/res/layout/list_single_card.xml
+++ b/app/src/main/res/layout/list_single_card.xml
@@ -19,7 +19,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:id="@+id/checkbox"
+            android:id="@+id/checkboxx"
             android:layout_weight="1"/>
 
         <ImageView
