--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">@color/teal_500</color>
     <color name="colorPrimaryDark">@color/teal_700</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorButton">#006400</color>
 
 
 
